--- a/market.html
+++ b/market.html
@@ -57,8 +57,8 @@
                             <hr>
                             <p style="margin-bottom: 10px;margin-left: 34px;font-family: Poppins, sans-serif;"><br>We&nbsp;classify&nbsp;ourselves&nbsp;in&nbsp;a&nbsp;sustainable&nbsp;manufacturing&nbsp;market&nbsp;<br>place&nbsp;where&nbsp;there&nbsp;is&nbsp;harmony&nbsp;between&nbsp;nature&nbsp;and&nbsp;business!&nbsp;<br>We&nbsp;believe&nbsp;eco-friendly&nbsp;businesses&nbsp;are&nbsp;the&nbsp;way&nbsp;to&nbsp;go...<br><br></p>
                             <div
-                                style="text-align:center"><button class="btn btn-light btn-lg" type="button" href="contact.html">Learn More</button></div>
-                    </div>
+                                style="text-align:center"><button class="btn btn-light btn-lg" type="button" href="contact.html"><a href="contact.html">Learn More</a></button></div>
+                    </div>a
                 </div>
             </div>
         </div>
